<resources>
    <string name="app_name">Saúde mais perto</string>

    <string name="login_hint_email">Email</string>
    <string name="login_hint_senha">Senha</string>
    <string name="login_btn_entrar">Entrar</string>
    <string name="login_btn_registrar">Não tem uma conta? Registre-se</string>
    <string name="login_dlg_erro_titulo">Falha ao fazer login</string>
    <string name="login_pdlg_acessando_conta">Acessando a conta, \naguarde…</string>

    <string name="cadastro_hint_nome">Nome Completo</string>
    <string name="cadastro_hint_email">Email</string>
    <string name="cadastro_hint_senha">Senha</string>
    <string name="cadastro_hint_confirmar_senha">Confirmar Senha</string>
    <string name="cadastro_hint_tel">Telefone</string>
    <string name="cadastro_hint_end">Endereço</string>
    <string name="cadastro_btn_criar_conta">Criar Conta</string>
    <string name="cadastro_btn_acessar_conta">Acesse sua conta</string>
    <string name="cadastro_foto">Foto do usuário</string>
    <string name="cadastro_erro_senhas_diferentes">\nAs senhas precisam ser idênticas</string>
    <string name="cadastro_erro_registro">Não foi possível criar a conta</string>
    <string name="cadastro_erro_titulo">Erro</string>
    <string name="cadastro_toast_conta_criada">Conta criada</string>
    <string name="cadastro_pdlg_criando_conta">Criando conta, \naguarde…</string>

    <string name="erro_campo_obrigatorio">Campo obrigatório</string>
    <string name="erro_email">Digite um email válido</string>
    <string name="erro_tamanho_senha">A senha deve conter no mínimo 6 caracteres</string>
    <string name="erro_confirmar_senha">As senhas precisam ser idênticas</string>
    <string name="erro_firebase_cadastro_generico">\nNão foi possivel criar a conta. \nTente novamente mais tarde</string>
    <string name="erro_firebase_cadastro_tamanho_senha">\nA senha deve conter no mínimo 6 caracteres</string>
    <string name="erro_firebase_cadastro_email">\nDigite um email válido</string>
    <string name="erro_firebase_cadastro_email_usado">\nEsse email já está sendo usado</string>
    <string name="erro_firebase_cadastro_internet">Não foi possível criar a conta. \nVerifique sua conexão com a internet</string>
    <string name="erro_firebase_login_internet">Não foi possível entrar. \nVerifique sua conexão com a internet.</string>
    <string name="erro_firebase_login_generico">Não foi possível entrar. \nTente novamente mais tarde.</string>
    <string name="erro_firebase_login_credenciais">\nEmail e/ou senha incorretos</string>

    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_buscar">Buscar</string>

    <string name="btn_ok">OK</string>

    <string name="tab_proximos">PRÓXIMOS</string>
    <string name="tab_mapa">MAPA</string>
    <string name="tab_favoritos">FAVORITOS</string>

    <string name="main_hint_pesquisar">Pesquisar…</string>
    <string name="main_title_pesquisar">Pesquisar</string>
    <string name="main_title_filtrar">Filtrar</string>
    <string name="main_dlg_sobre">Desenvolvido por:\n\nGabriel Cardim, Samuel Melo,Juscelino\</string>
    <string name="main_dlg_mensagem_localizacao_negada">Precisamos da sua localização para obter os Estabelecimento de saúde que se encontram perto de você.</string>
    <string name="main_dlg_titulo_localizacao_negada">Localização negada</string>

    <string name="compartilhar_txt">Enviar para…</string>
    <string name="erro_servidor">Erro: O servidor não está respondendo</string>
    <string name="erro_inesperado">Erro Inesperado: Tente novamente mais tarde</string>
    <string name="add_aos_favoritos">%1$s foi adicionado aos favoritos</string>
    <string name="remover_dos_favoritos">%1$s foi removido dos favoritos</string>
    <string name="snackbar_desfazer">DESFAZER</string>
    <string name="acao_compartilhar">acao_compartilhar</string>
    <string name="acao_ligar">Ligar</string>
    <string name="acao_salvar">Salvar</string>
    <string name="acao_remover">Remover</string>
    <string name="favoritos_vazio">Você ainda não marcou nenhum estabelecimento como favorito</string>
    <string name="nenhum_resultado_mensagem">Nenhum resultado encontrado</string>
    <string name="detalhes_nenhuma_avaliacao">nenhuma avaliação</string>

</resources>
