<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.gabri.saudeperto.atividades.CadastroActivity">

        <RelativeLayout
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/cadastro_iv_foto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/cadastro_foto"
                android:onClick="trocarFoto"
                app:srcCompat="@drawable/usuario" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/cadastro_btn_editar_foto"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignBottom="@id/cadastro_iv_foto"
                android:layout_alignEnd="@id/cadastro_iv_foto"
                android:layout_alignRight="@id/cadastro_iv_foto"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/edit3" />
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastro_et_nome_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/cadastro_et_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_hint_nome"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastro_et_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/cadastro_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_hint_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastro_et_senha_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/cadastro_et_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_hint_senha"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cadastro_et_confirmar_senha_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cadastro_et_confirmar_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_hint_confirmar_senha"
                android:inputType="textPassword"
                android:imeOptions="actionDone" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/cadastro_btn_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/azul_claro"
            android:text="@string/cadastro_btn_criar_conta"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/cadastro_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="?android:selectableItemBackground"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:text="@string/cadastro_btn_acessar_conta"
            android:textColor="@color/azul_claro" />

    </LinearLayout>
</ScrollView>